# libpass

./: .gitignore  Cargo.toml  README.md  tarpaulin.toml
examples/: basic.rs  playground.rs  sorting.rs
features/: clipboard.feature  git.feature  gpg-id.feature  incompatibilities.feature  initialization.feature  opening.feature  passwords.feature  smoke.feature  store.feature  traversal.feature  walking.feature
src/: decrypted_password.rs  directory.rs  entries.rs  entry.rs  error.rs  git.rs  inserter.rs  iterators.rs  lib.rs  matched_entries.rs  matched_passwords.rs  pass_node.rs  password.rs  store.rs  store_builder.rs  traversal.rs  util.rs
src/builder/: location.rs  mod.rs  passphrase_provider.rs  signing_key.rs  sorting.rs  store_builder.rs  umask.rs
src/git/: conflict_resolver.rs  conflicted_binary.rs  conflicted_gpg_id.rs  conflicted_password.rs  conflicted_plain_text.rs  mod.rs
src/parsed/: conflicted_password.rs  decrypted_password.rs  inserter.rs  mod.rs  pass.pest
src/passphrase_utils/: analyzer.rs  generator.rs  mod.rs
tests/: common.rs  cucumber.rs  generate_gnupg_home.rs  smoke_test.rs
tests/cucumber/: content.rs  creation.rs  mod.rs  preparation.rs  world.rs
tests/setups/: empty.sh  initialized.sh  smoke.sh
