[package]
name = "pass"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

[features]
default = ["parsed-passwords", "passphrase-utils"]

parsed-passwords = ["pest", "pest_derive"]
passphrase-utils = ["passwords"]

[dependencies]
bitflags = "1.2.1"
directories = "3.0.1"
gpgme = "0.9.2"
id_tree = "1.7.0"
thiserror = "1.0.22"
git2 = "0.13.20"

pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
passwords = { version = "3.1.3", optional = true }
custom_debug = "0.5.0"
tempfile = "3.2.0"

[dev-dependencies]
anyhow = "1.0.34"
async-trait = "0.1.42"
futures = "0.3.8"
tempdir = "0.3.7"
tar = "0.4.30"
base64 = "0.13.0"
zstd = "0.5.3"
copy_dir = "0.1.2"
rand = "0.8.2"
tokio = { version = "1.12.0", features = ["full"] }
num_cpus = "1.13.0"

[dev-dependencies.cucumber]
git = "https://github.com/cucumber-rs/cucumber"
branch = "main"

[[test]]
name = "cucumber"
path = "tests/cucumber/mod.rs"
harness = false
