[package]
name = "pass"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"

[features]
default = ["passphrase-utils"]

parsed-passwords = ["pest", "pest_derive"]
passphrase-utils = ["passwords"]
all = ["parsed-passwords", "passphrase-utils"]

[dependencies]
bitflags = "1.3.2"
directories = "4.0.1"
gpgme = "0.10.0"
id_tree = "1.8.0"
thiserror = "1.0.29"
git2 = "0.13.24"

pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
passwords = { version = "3.1.8", optional = true }
custom_debug = "0.5.0"
tempfile = "3.2.0"
walkdir = "2.3.2"
dissimilar = "1.0.2"

[dev-dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
futures = "0.3.17"
tar = "0.4.37"
base64 = "0.13.0"
zstd = "0.9.0"
rand = "0.8.4"
tokio = { version = "1.12.0", features = ["full"] }
num_cpus = "1.13.0"
libgit2-sys = "0.12.23"
owning_ref = "0.4.1"
ouroboros = "0.10.1"

[dev-dependencies.cucumber]
git = "https://github.com/cucumber-rs/cucumber"
branch = "main"

[[test]]
name = "cucumber"
path = "tests/cucumber/mod.rs"
harness = false
