[package]
name = "pass"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["passphrase-utils"]

parsed-passwords = ["pest", "pest_derive"]
passphrase-utils = ["passwords"]
all = ["parsed-passwords", "passphrase-utils"]

[dependencies]
bitflags = "1.3.2"
directories = "4.0.1"
gpgme = "0.10.0"
id_tree = "1.8.0"
thiserror = "1.0.30"
git2 = "0.15.0"

pest = { version = "2.1.3", optional = true }
pest_derive = { version = "2.1.0", optional = true }
passwords = { version = "3.1.9", optional = true }
custom_debug = "0.5.0"
tempfile = "3.3.0"
walkdir = "2.3.2"
dissimilar = "1.0.3"
similar = "2.1.0"

[dev-dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
futures = "0.3.21"
tar = "0.4.38"
base64 = "0.13.0"
zstd = "0.11.1"
rand = "0.8.5"
tokio = { version = "1.17.0", features = ["full"] }
num_cpus = "1.13.1"
libgit2-sys = "0.14.0"
ouroboros = "0.15.0"

[dev-dependencies.cucumber]
git = "https://github.com/cucumber-rs/cucumber"
branch = "main"

[patch.crates-io]
git2 = { git = "https://github.com/fin-ger/git2-rs", branch = "add-index-conflict-fns" }
libgit2-sys = { git = "https://github.com/fin-ger/git2-rs", branch = "add-index-conflict-fns" }

[[test]]
name = "cucumber"
path = "tests/cucumber/mod.rs"
harness = false
